--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Force Xcode 11
-      run: sudo xcode-select -switch /Applications/Xcode_11.3.app
+    - name: Force Xcode
+      run: sudo xcode-select -switch /Applications/Xcode.app
     - name: Run tests
       run: xcodebuild clean test -project "Ceiba.xcodeproj" -scheme "Ceiba" -destination "platform=iOS Simulator,name=iPhone 11 Pro Max,OS=latest"
     - name: Build App
