--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,7 +15,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Force Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
-    - name: Run tests
-      run: xcodebuild clean test -project "Ceiba.xcodeproj" -scheme "Ceiba" -destination "platform=iOS Simulator,name=iPhone 11 Pro Max,OS=latest"
     - name: Build App
-      run: xcodebuild -project "Ceiba.xcodeproj" -scheme "Ceiba" -destination "generic/platform=iOS" -configuration Release build CODE_SIGNING_ALLOWED=NO
+      run: 
+          xcodebuild -project "Ceiba.xcodeproj" -scheme "Ceiba" -destination "generic/platform=iOS" -configuration Release build CODE_SIGNING_ALLOWED=NO
+    - name: Run tests
+      env:
+          scheme: ${{ 'default' }}
+          platform: ${{ 'iOS Simulator' }}
+      run: 
+          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
+          xcodebuild clean test -project "Ceiba.xcodeproj" -scheme "Ceiba" -destination "platform=$platform,name=$device"
