--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -24,4 +24,4 @@ jobs:
           platform: ${{ 'iOS Simulator' }}
       run: 
           device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          xcodebuild clean test -project "Ceiba.xcodeproj" -scheme "Ceiba" -destination "platform=$platform,name=$device"
+          xcodebuild clean test -project "Ceiba.xcodeproj" -scheme "CeibaTests" -destination "platform=$platform,name=$device"
