--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,15 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Force Xcode
+    - name: Run tests
       run: sudo xcode-select -switch /Applications/Xcode.app
     - name: Build App
-      run: 
-          xcodebuild -project "Ceiba.xcodeproj" -scheme "Ceiba" -destination "generic/platform=iOS" -configuration Release build CODE_SIGNING_ALLOWED=NO
-    - name: Run tests
-      env:
-          scheme: ${{ 'default' }}
-          platform: ${{ 'iOS Simulator' }}
-      run: 
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          xcodebuild clean test -project "Ceiba.xcodeproj" -scheme "CeibaTests" -destination "platform=$platform,name=$device"
+      run: fastlane beta
